fix Create Meal Plan collapse

--- a/client/src/layouts/Layout.css
+++ b/client/src/layouts/Layout.css
@@ -9,6 +9,7 @@ div #layout {
     flex-direction: column;
     align-items: flex-start;
     padding: 25px;
+    width: max-content;
 }
 
 #layout hr.solid {
